--- a/TCC/TCC.vbproj
+++ b/TCC/TCC.vbproj
@@ -88,10 +88,12 @@
     <Content Include="bootstrap3\css\bootstrap.css" />
     <Content Include="bootstrap3\css\bootstrap.min.css" />
     <Content Include="bootstrap3\fonts\glyphicons-halflings-regular.svg" />
+    <Content Include="Convidados.aspx" />
     <Content Include="js\bootstrap.js" />
     <Content Include="js\bootstrap.min.js" />
     <Content Include="Default.aspx" />
     <Content Include="Login.aspx" />
+    <Content Include="Pacote.aspx" />
     <Content Include="Registro.aspx" />
     <Content Include="Web.config" />
   </ItemGroup>
@@ -104,11 +106,22 @@
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
     <Compile Include="Classes\Comuns.vb" />
+    <Compile Include="Classes\Convidados.vb" />
+    <Compile Include="Classes\ConvidadosModel.vb" />
     <Compile Include="Classes\DbContext.vb" />
     <Compile Include="Classes\DbSet.vb" />
     <Compile Include="Classes\Login.vb" />
+    <Compile Include="Classes\Pacote.vb" />
+    <Compile Include="Classes\PacoteModel.vb" />
     <Compile Include="Classes\Registro.vb" />
     <Compile Include="Classes\RegistroModel.vb" />
+    <Compile Include="Convidados.aspx.designer.vb">
+      <DependentUpon>Convidados.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Convidados.aspx.vb">
+      <DependentUpon>Convidados.aspx</DependentUpon>
+      <SubType>ASPXCodebehind</SubType>
+    </Compile>
     <Compile Include="Default.aspx.designer.vb">
       <DependentUpon>Default.aspx</DependentUpon>
     </Compile>
@@ -141,6 +154,13 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
+    </Compile>
+    <Compile Include="Pacote.aspx.designer.vb">
+      <DependentUpon>Pacote.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Pacote.aspx.vb">
+      <DependentUpon>Pacote.aspx</DependentUpon>
+      <SubType>ASPXCodebehind</SubType>
     </Compile>
     <Compile Include="Registro.aspx.designer.vb">
       <DependentUpon>Registro.aspx</DependentUpon>
