--- a/TCC/Web.config
+++ b/TCC/Web.config
@@ -48,7 +48,8 @@
     </system.web>
 
     <connectionStrings>
-      <add name="Conexao" connectionString="data source=ANDERSON-PC;initial catalog=TCC;password=;user id=" providerName="System.Data.Sql" />
+      <add name="Conexao" connectionString="data source=BLENER-PC;initial catalog=TCC;password=cloudmed;user id=sa" providerName="System.Data.Sql" />
+      <!--<add name="Conexao" connectionString="data source=ANDERSON-PC;initial catalog=TCC;Integrated security=True" providerName="System.Data.Sql" />-->
     </connectionStrings>
   
 </configuration>
